--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Header section -->
   <header class="header">
     <div class="container header-container">
-      <a class="logo link" href="">Web<span class="color-1">Studio</span></a>
+      <a class="header-logo logo link" href="">Web<span class="color-1">Studio</span></a>
       <nav class="header-nav">
         <ul class="header-list list">
           <li class="header-item">
@@ -462,24 +462,30 @@
   <div class="register-form-group" role="group">
     <lable class="register-form-wrap">
       <span class="register-form-lable">Имя</span>
+      <span class="register-form-field">
       <input class="register-form-input" type="text"/>
       <svg class="register-form-icon" width="18" height="18">
         <use href="./images/icons.svg#icon-form-name"></use>
       </svg>
+      </span>
     </lable>
     <lable class="register-form-wrap">
       <span class="register-form-lable">Телефон</span>
+      <span class="register-form-field">
       <input class="register-form-input" type="phone"/> 
       <svg class="register-form-icon" width="18" height="18">
         <use href="./images/icons.svg#icon-form-phone"></use>
       </svg>
+      </span>
     </lable>
     <lable class="register-form-wrap">
       <span class="register-form-lable">Почта</span>
+      <span class="register-form-field">
       <input class="register-form-input" type="email"/>
       <svg class="register-form-icon" width="18" height="18">
         <use href="./images/icons.svg#icon-form-email"></use>
       </svg>
+      </span>
     </lable>
     
     <lable class="register-form-wrap">
